# fatsapi-crud-and-authentication

./: main.py  pyproject.toml  requirements.txt  run_ngrok.py  test.db
alembic/: env.py
alembic/versions/: fb9b55e94f5b_create_book_column.py
src/: __init__.py  config.py
src/auth/: model.py  router.py  schema.py  utility.py
src/book/: data.py  route.py  schema.py
src/post/: model.py  route.py  schema.py
tests/: conftest.py  test_post.py  test_user.py
